--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,9 @@
 			{
 				"allowSingleExtends": true
 			}
-		]
+		],
+		"no-unused-vars": "off",
+		"@typescript-eslint/no-unused-vars": ["error"]
 	},
 	"overrides": [
 		{
