--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,11 +1,6 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-order-config-standard"
-  ],
-  "plugins": [
-    "stylelint-order"
-  ],
+  "extends": ["stylelint-config-standard", "stylelint-order-config-standard"],
+  "plugins": ["stylelint-order"],
   "rules": {
     "indentation": ["tab"],
     "color-hex-case": "upper"
