--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.27.0",
+    "prettier": "2.7.1",
     "stylelint": "^14.15.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^5.0.0",
