--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@types/classnames": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
