--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "eslint-config-next": "13.0.3",
     "eslint-plugin-unused-imports": "^2.0.0",
     "next": "13.0.3",
